<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@bool/settings_metrisch"
        android:key="@string/settings_key"
        android:summaryOff="@string/settings_summary_off"
        android:summaryOn="@string/settings_summary_on"
        android:title="@string/settings_title"
        />
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:key="@string/pref_key"
        android:title="@string/pref_location"
        android:summary="@string/pref_summary"
        android:dialogTitle="@string/pref_location"
        android:dialogMessage="@string/pref_location_default"
        android:inputType="textCapWords"/>
</PreferenceScreen>